lesson 5 first commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!Matt Fontes Website. February 11, 2019> 
+<!Matt Fontes Website. March 4, 2019> 
 
 <html>
 
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-<h1>Ski Colorado</h1>
+<img src="ski-colorado-header.jpg" width="800" height="275" alt="ski-colorado-header.">
+<h1>Ski Colorado!</h1>
+<p><a href="index.html">Overview</a> | <a href="media.html">Media</a> | <a href="author.html">Author</a></p>
 <h2><em>Overview</em></h2>
 
 <p>When many people think of skiing and destinations to do it at, one of the first places that comes to mind is Colorado. The state of Colorado boosts more than 10 massive ski resorts that have so much to offer you'll keep wanting to go back for more.</p>
@@ -22,13 +24,7 @@
 
 <p>Not only are the ski resorts in Colorado great for skiing, but they also host a multitude of different snow sports and activities. Alot of these ski resorts are known for their snow mobiling, ice skating, snow shoeing and more. So even though skiing may be the main event, there are also multiple other activities and things to do as well. When looking for a place to go on your next ski trip, look no further than Colorado because they've got it all. </p>
 
-
-<blockquote>
-  <p><em><strong>Don’t be surprised if once you get onto the mountain that a feeling of empowerment begins to well up inside you and you find yourself deciding to charge up some hike to terrain.  ~Breckenridge Resort</strong></em></p>
-</blockquote>
-
 <hr>
-
 
 <p>Top 5 Places to Ski in Colorado:</p>
 <ol>
@@ -70,29 +66,13 @@
 
 </table>
 
-<hr>
-<h3><em>References</em></h3>
-<p>Breckenridge Resort</p>
-<ul>
-  <li>Website: https://www.breckenridge.com/explore-the-resort/about-the-resort/about-breckenridge.aspx</li>
-  
-</ul>
-<p>Aspen Snowmass</p>
-<ul>
-  <li>Website: https://www.aspensnowmass.com/</li>
-</ul>
+<p>&nbsp;</p>
 
-<p>Title: &quot;More snow, more lifts, more trails: Colorado ski resorts seeing best start to season in five years&quot;</p>
-<ul>
-  <li>Autor: John Meyer</li>
-  <li>Publication: The Denver Post</li>
-  <li>Date: December 12, 2018</li>
-  <li>https://theknow.denverpost.com/2018/12/12/colorado-snow-ski-resorts-2019/203961/</li>
-</ul>
+<img src="skiingdown.jpg" width="300" height="275" alt="skiingdown.">
 
 <p>&nbsp;</p>
 <hr>
-<p><em>&copy; Matt Fontes, mwf17@my.fsu.edu</em></p>
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /><em> <a href="mailto:mwf17@my.fsu.edu">Matt Fontes</a></a></em></p>
 </body>
 
 </html> 
