Lesson 5 final commit

--- a/author.html
+++ b/author.html
@@ -1,10 +1,11 @@
-<!Matt Fontes Website. March 4, 2019> 
+<!Matt Fontes Website. March 26, 2019> 
 
 <html>
 
 <head>
 <meta charset="UTF-8">
 <title>Ski Colorado!</title>
+<link rel="stylesheet" href="style.css"> 
 
 </head>
 
@@ -40,8 +41,19 @@
 </ul>
 
 <p>&nbsp;</p>
+
+<hr>
+<table width="200">
+  <tr>
+    <td bgcolor="#FFFFFF">&nbsp;</td>
+    <td bgcolor="#0010E8">&nbsp;</td>
+    <td bgcolor="#A4D4FF">&nbsp;</td>
+    <td bgcolor="#E4E4F7">&nbsp;</td> 
+  </tr>
+</table>
+<p>The color pallet I selected consist of shades of blue, white and gray. Given that my website is about Colorado skiing, I wanted to use colors that sort of resemble the cold and the snow.</p>
 <hr>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /><em> <a href="mailto:mwf17@my.fsu.edu">Matt Fontes</a></a></em></p>
 </body> 
 
-</html> 
+</html>  
