--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!Matt Fontes Website. March 4, 2019> 
+<!Matt Fontes Website. March 26, 2019> 
 
 <html>
 
 <head>
 <meta charset="UTF-8">
 <title>Ski Colorado!</title>
+<link rel="stylesheet" href="style.css"> 
 
 </head>
 
