lesson 6 final commit

--- a/author.html
+++ b/author.html
@@ -1,4 +1,4 @@
-<!Matt Fontes Website. March 26, 2019> 
+<!Matt Fontes Website. April 8, 2019> 
 
 <html>
 
@@ -10,10 +10,16 @@
 </head>
 
 <body>
+  
+<div id="container"> 
+
+<div id="header">
 <img src="ski-colorado-header.jpg" width="800" height="275" alt="ski-colorado-header.">
 <h1>Ski Colorado!</h1>
 <p><a href="index.html">Overview</a> | <a href="media.html">Media</a> | <a href="author.html">Author</a></p>
-
+</div><!-- end header --> 
+ 
+ <div id="content"> 
 <h2><em>About the Author</em></h2>
 <p><em>Matt Fontes</em></p>
 
@@ -53,7 +59,14 @@
 </table>
 <p>The color pallet I selected consist of shades of blue, white and gray. Given that my website is about Colorado skiing, I wanted to use colors that sort of resemble the cold and the snow.</p>
 <hr>
+</div><!-- end content --> 
+
+<div id="footer">
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /><em> <a href="mailto:mwf17@my.fsu.edu">Matt Fontes</a></a></em></p>
+</div><!-- end footer -->
+
+</div> <!-- end container --> 
+
 </body> 
 
-</html>  
+</html> 
