--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!Matt Fontes Website. March 26, 2019> 
+<!Matt Fontes Website. April 8, 2019> 
 
 <html>
 
@@ -10,9 +10,17 @@
 </head>
 
 <body>
+
+<div id="container">
+     
 <img src="ski-colorado-header.jpg" width="800" height="275" alt="ski-colorado-header.">
 <h1>Ski Colorado!</h1>
 <p><a href="index.html">Overview</a> | <a href="media.html">Media</a> | <a href="author.html">Author</a></p>
+
+</div><!-- end header -->
+
+<div id="content">
+  
 <h2><em>Overview</em></h2>
 
 <p>When many people think of skiing and destinations to do it at, one of the first places that comes to mind is Colorado. The state of Colorado boosts more than 10 massive ski resorts that have so much to offer you'll keep wanting to go back for more.</p>
@@ -67,13 +75,30 @@
 
 </table>
 
+</div><!-- end content --> 
+
 <p>&nbsp;</p>
 
+<div id="sidebar">
+  
 <img src="skiingdown.jpg" width="300" height="275" alt="skiingdown.">
 
+</div><!-- end sidebar -->
+
 <p>&nbsp;</p>
+
 <hr>
+
+<p>&nbsp;</p>
+
+<div id="footer">
+  
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /><em> <a href="mailto:mwf17@my.fsu.edu">Matt Fontes</a></a></em></p>
+
+</div><!-- end footer -->
+
+</div> <!-- end container -->
+
 </body>
 
 </html> 
