--- a/media.html
+++ b/media.html
@@ -1,4 +1,4 @@
-<!Matt Fontes Website. March 26, 2019> 
+<!Matt Fontes Website. April 8, 2019> 
 
 <html>
 
@@ -10,20 +10,37 @@
 </head>
 
 <body>
+    
+<div id="container">
+
+<div id="header">
 <img src="ski-colorado-header.jpg" width="800" height="275" alt="ski-colorado-header.">
 <h1>Ski Colorado!</h1>
 <p><a href="index.html">Overview</a> | <a href="media.html">Media</a> | <a href="author.html">Author</a></p>
+</div> <!--end of header-->
 
+
+<div id="content">
 <h2><em><a id="media">Media</a></em></h2>
 
 <iframe width="697" height="392" src="https://www.youtube.com/embed/CzV_b0jfbao" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+<div id="sidebar">
 <blockquote>
   <p><em><strong>Don’t be surprised if once you get onto the mountain that a feeling of empowerment begins to well up inside you and you find yourself deciding to charge up some hike to terrain.  ~Breckenridge Resort</strong></em></p>
-</blockquote> 
+</blockquote>
+</div><!-- end sidebar -->
+
+</div> <!--end of content--> 
 
 <hr>
+
+<div id="footer">
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /><em> <a href="mailto:mwf17@my.fsu.edu">Matt Fontes</a></a></em></p>
+</div><!-- end footer -->
+
+</div> <!--end of container-->
+
 </body>
 
 </html> 
