--- a/media.html
+++ b/media.html
@@ -5,7 +5,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Ski Colorado!</title>
-<link rel="stylesheet" href="style.css"> 
+<link rel="stylesheet" href="style.css">
+<link href="style-navbar.css" rel="stylesheet"> 
 
 </head>
 
@@ -16,6 +17,15 @@
 <div id="header">
 <img src="ski-colorado-header.jpg" width="800" height="275" alt="ski-colorado-header.">
 <h1>Ski Colorado!</h1>
+
+<div id="navbar">
+  <ul id="menu">
+    <li><a href="index.html" class="button selected">Overview</a></li>
+    <li><a href="media.html" class="button">Media</a></li>
+    <li><a href="author.html" class="button">Author</a></li>
+</ul>
+</div> <!--end of navbar-->
+
 <p><a href="index.html">Overview</a> | <a href="media.html">Media</a> | <a href="author.html">Author</a></p>
 </div> <!--end of header-->
 
